data/all_generated_tests/raw_wast_tests/br_table_UnreachableCodeExecution_2138.wast
;; 8. **Test with External Function in Stack Management:**    - Description: Mimic the behavior of `wizard_engine` by involving custom external functions for stack operations and `br_table` management.    - Constraint Checked: Integration and correctness of external functions.    - Relates to Unreachable Code Execution: Errors in custom function handling can cause the execution of `unreachable` instructions due to incorrect branches.

(assert_invalid
  (module
    (func $external_func (param i32) (result i32)
      (local.get 0)
    )
    (func (param i32) (result i32)
      (block (result i32)
        (call $external_func (local.get 0))
        (br_table 0 1 (local.get 0))
      )
    )
  )
  "type mismatch"
)